# hobby-stm32scope

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: gcc_stm32.cmake  gcc_stm32f1.cmake  gcc_stm32g4.cmake  stm32_load_rules.cmake  stm32g4_stlinkv3.cfg
include/: types.h
libopencm3/: CMakeLists.txt
libopencm3/include/libopencm3/stm32/g4/: usart.h
libopencm3/lib/stm32/g4/: Makefile
src/: adc.h  adc_f1.c  adc_g4.c  bsp.h  bsp_f1.c  bsp_g4.c  control.c  control.h  main.c  stm32g431kb.ld
